--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,19 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer base {
+  /* html {
+    -webkit-tap-highlight-color: transparent;
+  } */
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  html,
   body {
-    color: white;
-    background: black;
+    -webkit-tap-highlight-color: transparent;
+    @apply p-0 m-0 bg-white text-base font-NunitoSans box-border;
+  }
+
+  .active {
+    @apply text-custom-blue  transition-all duration-300;
   }
 }
